# prediction_202603

./: .env.example  .gitignore  pyproject.toml  signal-tracker-prd.md  vercel.json
src/signal_tracker/: cli.py  collector.py  ensemble.py  extractor.py  graph_extractor.py  news_ingester.py  storage.py
tasks/: polymarket-ui-research.md  todo.md
tests/: test_collector.py  test_ensemble.py  test_news_ingester.py
web/: package-lock.json  package.json
web/drizzle/: 0000_long_human_fly.sql  0001_tricky_bill_hollister.sql  0002_early_vulture.sql  0003_hot_king_cobra.sql  0004_redundant_lord_hawal.sql  relations.ts  schema.ts
web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
web/scripts/: ensure-workspace.ts  run-backtests.ts  seed-live-data.ts  seed-track-record.ts
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(marketing)/: page.tsx
web/src/app/analyze/: page.tsx
web/src/components/: auto-refresh.tsx  backfill-button.tsx  briefing-narrative.tsx  briefing-view.tsx  calibration-chart.tsx  cumulative-chart.tsx  data-freshness.tsx  entity-network-panel.tsx  generate-recs-panel.tsx  graph-visualization.tsx  home-grid.tsx  nav.tsx  news-ticker.tsx  overdue-theses-banner.tsx  prediction-card.tsx  price-display.tsx  probability-explainer.tsx  provenance-drawer.tsx  recommendations-landing.tsx  resolve-dialog.tsx  signal-card.tsx  source-input.tsx  sparkline.tsx  thesis-detail.tsx
web/src/lib/: billing.ts  format-time.ts  guards.ts
(+109 files in other folders)
